--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,10 +18,6 @@
   <listener>
     <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
   </listener>
-
-
-
-
   <!-- 前端控制器（加载classpath:springmvc.xml 服务器启动创建servlet） -->
   <servlet>
     <servlet-name>dispatcherServlet</servlet-name>
@@ -60,6 +56,11 @@
     <filter-name>springSecurityFilterChain</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+
+  <error-page>
+    <error-code>403</error-code>
+    <location>/pages/403.jsp</location>
+  </error-page>
 
     <welcome-file-list>
     <welcome-file>index.html</welcome-file>
